tests/snapshots/autotarget__full_example_with_declarations_2015.snap
---
source: tests/autotarget.rs
expression: m
---
Manifest {
    package: Some(
        Package {
            name: "test-package",
            edition: None,
            version: Some(
                Local(
                    "0.1.0",
                ),
            ),
            build: None,
            workspace: None,
            authors: None,
            links: None,
            description: None,
            homepage: None,
            documentation: None,
            readme: None,
            keywords: None,
            categories: None,
            license: None,
            license_file: None,
            repository: None,
            metadata: None,
            rust_version: None,
            exclude: None,
            include: None,
            default_run: None,
            autolib: None,
            autobins: None,
            autoexamples: None,
            autotests: None,
            autobenches: None,
            publish: None,
            resolver: None,
        },
    ),
    cargo_features: None,
    workspace: None,
    dependencies: None,
    dev_dependencies: None,
    build_dependencies: None,
    target: None,
    features: None,
    bin: [
        Product {
            path: Some(
                "src/bin/named-executable.rs",
            ),
            name: Some(
                "named-executable",
            ),
            test: true,
            doctest: true,
            bench: true,
            doc: true,
            plugin: false,
            proc_macro: false,
            harness: true,
            edition: None,
            required_features: [],
            crate_type: Some(
                [
                    "bin",
                ],
            ),
        },
    ],
    bench: [
        Product {
            path: Some(
                "benches/large-input.rs",
            ),
            name: Some(
                "large-input",
            ),
            test: true,
            doctest: true,
            bench: true,
            doc: true,
            plugin: false,
            proc_macro: false,
            harness: true,
            edition: None,
            required_features: [],
            crate_type: Some(
                [
                    "bin",
                ],
            ),
        },
    ],
    test: [
        Product {
            path: Some(
                "tests/some-integration-tests.rs",
            ),
            name: Some(
                "some-integration-tests",
            ),
            test: true,
            doctest: true,
            bench: true,
            doc: true,
            plugin: false,
            proc_macro: false,
            harness: true,
            edition: None,
            required_features: [],
            crate_type: Some(
                [
                    "bin",
                ],
            ),
        },
    ],
    example: [
        Product {
            path: Some(
                "examples/simple.rs",
            ),
            name: Some(
                "simple",
            ),
            test: true,
            doctest: true,
            bench: true,
            doc: true,
            plugin: false,
            proc_macro: false,
            harness: true,
            edition: None,
            required_features: [],
            crate_type: Some(
                [
                    "bin",
                ],
            ),
        },
    ],
    patch: None,
    lib: Some(
        Product {
            path: Some(
                "src/lib.rs",
            ),
            name: Some(
                "test_package",
            ),
            test: true,
            doctest: true,
            bench: true,
            doc: true,
            plugin: false,
            proc_macro: false,
            harness: true,
            edition: None,
            required_features: [],
            crate_type: Some(
                [
                    "lib",
                ],
            ),
        },
    ),
    profile: None,
    badges: None,
}
